[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/main/career/ui/LandmarkLine.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/theme/chalkboard-36.theme" type="Theme" id=2]
[ext_resource path="res://assets/main/career/ui/map/player-dot.png" type="Texture2D" id=3]
[ext_resource path="res://assets/main/career/ui/map/player-sheet.png" type="Texture2D" id=4]
[ext_resource path="res://src/main/career/ui/landmark-container.gd" type="Script" id=5]
[ext_resource path="res://src/main/career/ui/chalkboard-map-row.gd" type="Script" id=7]
[ext_resource path="res://src/main/career/ui/Landmark.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/main/career/ui/LandmarkSpacer.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/career/ui/player-landmark.gd" type="Script" id=10]
[ext_resource path="res://src/main/career/ui/landmark-lines.gd" type="Script" id=11]

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "alone"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=18]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="MapRow" type="Control"]
modulate = Color( 1, 0.956863, 0.501961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -465.0
offset_top = -80.0
offset_right = 465.0
offset_bottom = 80.0
custom_minimum_size = Vector2( 0, 160 )
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 50
theme_override_constants/margin_top = 5
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 5

[node name="Lines" type="Control" parent="MarginContainer"]
offset_left = 50.0
offset_top = 5.0
offset_right = 880.0
offset_bottom = 155.0
script = ExtResource( 11 )
LandmarkLineScene = ExtResource( 1 )

[node name="Line2D1" parent="MarginContainer/Lines" instance=ExtResource( 1 )]
points = PackedVector2Array( 86.2677, 94.1346, 136.271, 73.4984 )

[node name="Line2D2" parent="MarginContainer/Lines" instance=ExtResource( 1 )]
points = PackedVector2Array( 238.658, 72.7047, 290.249, 79.848 )

[node name="Line2D3" parent="MarginContainer/Lines" instance=ExtResource( 1 )]
points = PackedVector2Array( 384.699, 80.6417, 441.052, 76.6732 )

[node name="Line2D4" parent="MarginContainer/Lines" instance=ExtResource( 1 )]
points = PackedVector2Array( 539.471, 74.2921, 593.442, 70.3235 )

[node name="Line2D5" parent="MarginContainer/Lines" instance=ExtResource( 1 )]
points = PackedVector2Array( 691.861, 83.0228, 743.452, 76.6732 )

[node name="Landmarks" type="HBoxContainer" parent="MarginContainer"]
offset_left = 50.0
offset_top = 5.0
offset_right = 880.0
offset_bottom = 155.0
theme_override_constants/separation = 0
script = ExtResource( 5 )
LandmarkScene = ExtResource( 8 )
LandmarkSpacerScene = ExtResource( 9 )
map_row_path = NodePath("../..")

[node name="Circles" parent="MarginContainer/Landmarks" instance=ExtResource( 8 )]
offset_right = 75.0
type = 10

[node name="Spacer1" parent="MarginContainer/Landmarks" instance=ExtResource( 9 )]
offset_left = 75.0
offset_right = 150.0

[node name="Landmark1" parent="MarginContainer/Landmarks" instance=ExtResource( 8 )]
offset_left = 150.0
offset_right = 226.0

[node name="Spacer2" parent="MarginContainer/Landmarks" instance=ExtResource( 9 )]
offset_left = 226.0
offset_right = 301.0

[node name="Landmark2" parent="MarginContainer/Landmarks" instance=ExtResource( 8 )]
offset_left = 301.0
offset_right = 377.0

[node name="Spacer3" parent="MarginContainer/Landmarks" instance=ExtResource( 9 )]
offset_left = 377.0
offset_right = 452.0

[node name="Landmark3" parent="MarginContainer/Landmarks" instance=ExtResource( 8 )]
offset_left = 452.0
offset_right = 528.0

[node name="Spacer4" parent="MarginContainer/Landmarks" instance=ExtResource( 9 )]
offset_left = 528.0
offset_right = 603.0

[node name="Landmark4" parent="MarginContainer/Landmarks" instance=ExtResource( 8 )]
offset_left = 603.0
offset_right = 679.0

[node name="Spacer5" parent="MarginContainer/Landmarks" instance=ExtResource( 9 )]
offset_left = 679.0
offset_right = 754.0

[node name="Landmark5" parent="MarginContainer/Landmarks" instance=ExtResource( 8 )]
offset_left = 754.0
offset_right = 830.0

[node name="Player" type="Control" parent="MarginContainer"]
offset_left = 50.0
offset_top = 5.0
offset_right = 880.0
offset_bottom = 155.0
script = ExtResource( 10 )
map_row_path = NodePath("../..")

[node name="Label" type="Label" parent="MarginContainer/Player"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 99.0
offset_top = 25.0
offset_right = 206.0
offset_bottom = 75.0
custom_minimum_size = Vector2( 120, 0 )
theme = ExtResource( 2 )
text = "999,999"
align = 1

[node name="DotSprite" type="Sprite2D" parent="MarginContainer/Player"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 570.059, 72.9505 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="PlayerSprite" type="Sprite2D" parent="MarginContainer/Player"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 569.63, 35.1632 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/Player/PlayerSprite"]
autoplay = "default"
anims/RESET = SubResource( 17 )
anims/alone = SubResource( 19 )
anims/default = SubResource( 18 )

[node name="Line2D" type="Line2D" parent="MarginContainer/Player"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
points = PackedVector2Array( 570.443, 73.496, 585.579, 96.2001 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[connection signal="sort_children" from="MarginContainer/Landmarks" to="MarginContainer/Lines" method="_on_Landmarks_sort_children"]
[connection signal="sort_children" from="MarginContainer/Landmarks" to="MarginContainer/Player" method="_on_Landmarks_sort_children"]
